# agentic-ai-workshop

./: .env.example  .gitignore  Glossary.md  README.md  app.py  cli.py  config.py  demo.py  main.py  pyproject.toml  requirements.txt
core/: embeddings.py  llm_provider.py
data/: inventory.json  orders.json
data/retail_docs/: delivery_guidelines.txt  escalation_playbook.txt  fulfillment_faq.txt  fulfillment_workflow.md  inventory_notes.txt  returns_policy.txt
exercises/: 00a_basic_prompt.py  00b_system_prompt.py  00c_single_shot.py  00d_few_shot.py  01_llm_basics.py  02_rag_intro.py  03_agent_tools.py  04_mcp_server.py  README.md  run.py  run_all_exercises.py
models/: schemas.py
modules/agents/: agent.py  tools.py
modules/mcp/: fastmcp_server.py  server.py
modules/rag/: loader.py  pipeline.py  retriever.py
